# spout-finance

./: Anchor.toml  KYC_INTEGRATION_SUMMARY.md  KYC_TOKEN_INTEGRATION.md  ORDERS_CONTRACT_SUMMARY.md  PYTH_INTEGRATION_SUMMARY.md  README.md  REAL_SAS_CPI_IMPLEMENTATION.md  SAS_CPI_INTEGRATION_SUMMARY.md  SAS_CPI_TEST_RESULTS.md  attestation-info.json  funded-keypair.json  keypair-info.json  new-user-attestation.json  package-lock.json  package.json  real-attestation-for-minting.json  real-attestation-info.json  test-complete-flow.ts  test-credential-flow.ts  test-demo-flow.ts  test-existing-config.ts  test-full-sas-integration.ts  test-kyc-verification-only.ts  test-kyc.ts  test-real-sas-cpi-calls.ts  test-real-sas-integration.ts  test-sas-cpi-calls.ts  test-sas-cpi-integration.ts  test-sas-cpi-structure.ts  test-sas-ownership.ts  test-schema.ts  test-simple-credential-flow.ts  test-simple-flow.ts  test-simplified-kyc.ts  test-working-demo.ts  tsconfig.json  update-config-to-sas.ts  user-attestation-info.json
contracts/programs/spoutsolana/: Cargo.toml
contracts/programs/spoutsolana/src/: lib.rs  orders.rs
programs/spoutsolana/: Cargo.toml
programs/spoutsolana/src/: errors.rs  kyc_token.rs  kyc_token_simple.rs  lib.rs  orders.rs  permissionedToken.rs  price_feed.rs  sas_integration.rs  state.rs
programs/spoutsolana/src/instructions/: create_asset.rs  initialize.rs  mod.rs
programs/spoutsolana/src/kyc/: mod.rs  verify.rs
programs/spoutsolana/src/kyc/instructions/: create_credential.rs  create_schema.rs  mod.rs  (+2 more)
programs/spoutsolana/src/token/: create_asset.rs
(+139 files in other folders)
