[package]
name = "spoutsolana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spoutsolana"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
bincode = "1.3.3"
# Parse Pyth price feeds on-chain - temporarily disabled due to getrandom issue
# pyth-sdk-solana = "0.7"
# SAS integration is via CPI using its program ID; no direct crate deps
# borsh = "0.10.3"
# mpl-token-metadata = "4.1.2"

